# node-kaldi-online-nnet3-decoder

./: .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  test.js
lib/: index.js
src/: nnet3.cpp  nnet3.h
test/: test.js
